Updated hero image and text spacing fixes #6

--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -269,7 +269,7 @@ footer.page-footer.error {
     }
 
     .modal-content {
-        height: calc(100% - 56px - 86px);
+        @include calc(height, '100% - 56px - 86px');
     }
 }
 
@@ -289,7 +289,7 @@ footer.page-footer.error {
 
         .modal-content {
             padding: 15px;
-            height: calc(100% - 56px - 68px);
+            @include calc(height, '100% - 56px - 68px');
         }
 
         .collection .collection-item.avatar .secondary-content {
@@ -362,6 +362,7 @@ footer.page-footer.error {
 
     .container {
         @include calc(height, '100vh - 100px');
+        width: 95%;
         z-index: 10;
         min-height: 525px;
         position: relative;
@@ -375,7 +376,7 @@ footer.page-footer.error {
         width: 100%;
         height: 100%;
         background-size: cover;
-        background-position: 20% 0%;
+        background-position: 30% 50%;
     }
 }
 
@@ -389,17 +390,17 @@ section .background {
 }
 
 .hero-heading {
-    margin-top: 8rem;
+    margin-top: 18rem;
 
     h1 {
-        color: white;
         font-size: 1.75rem;
+        @include calc(font-size, '4.5vw + 1px');
     }
 }
 
 .cta-buttons {
 
-    margin-top: 4rem;
+    margin-top: 0px;
 
     .button-wrapper {
         display: inline-block;
@@ -441,7 +442,6 @@ section .background {
 
 @media only screen and (min-width: 601px) {
     #homepage-hero {
-        background-position: 45% 0%;
 
         .container {
             @include calc(height, '100vh - 120px');
@@ -452,12 +452,22 @@ section .background {
     .hero-heading h1, .typed{
         font-size: 2.5rem; 
     }
+    
+    .hero-heading {
+        margin-top: 22rem;
+    }
 }
 
 @media only screen and (min-width: 993px) {
     #homepage-hero {
         .container {
             min-height: 600px;
+            .row {
+                position: absolute;
+                right: 0px;
+                bottom: 0px;
+                padding-bottom: 60px;
+            }
         }
     }
 
